<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hw3</string>
    <string name="action_settings">Settings</string>
    <string name="action_rgb">RGB</string>
    <string name="action_gray">Grayscale</string>
    <string name="action_binary">Binary</string>
    <string name="action_rgbNorm">Intensity-normalized</string>
    <string name="action_gamma">Gamma-corrected</string>
    
    
    <string name="hello_world">Hello world!</string>
    <string name="latitude">Latitude:</string>
	<string name="longitude">Longitude:</string>
	<string name="unknown">Unknown</string>
	<string name="acc">Accelerometer:</string>
	<string name="x">X: </string>
	<string name="y">Y: </string>
	<string name="z">Z: </string>
	<string name="gyr">Gyroscope:</string>
</resources>
