<menu xmlns:android="http://schemas.android.com/apk/res/android" >

  
    <item 
        android:id="@+id/action_rgb"
        android:showAsAction="never"
        android:title="@string/action_rgb"/>
    
    
   
    <item
        android:id="@+id/action_gray"
        android:showAsAction="never"
        android:title="@string/action_gray"/>
    
    
   
    <item
        android:id="@+id/action_binary"
        android:showAsAction="never"
        android:title="@string/action_binary"/>
    
       
    <item
        android:id="@+id/action_rgbNorm"
        android:showAsAction="never"
        android:title="@string/action_rgbNorm"/>
    
  
    
    <item
        android:id="@+id/action_gamma"
        android:showAsAction="never"
        android:title="@string/action_gamma"/>
   --> 

</menu>
